polish: Clock Tower (#2253)
* refactor: modernize

* test: opt in Clock Tower to sidebar test

* fix: quest start dialog highlight

* fix: Look for Quest Journal widget, not Quest Journal Overview widget

* nit: update quest start phrasing

* nit: update finish quest phrasing

it used to double the "Talk to Kojo for your reward" in the overlay

* nit: add bucket of water as a requirement to the "enter the basement" steps, ensuring you see it first thing after
placing the blue cog

* fix: add sync step to sidepanel so sidebar steps aren't all collapsed if a user relogs during quest

* feat: add step to get & fill an empty bucket during blue cog step if user doesn't have one

I'm happy to remove this if it feels too handholdy - the overlay text when entering basement for the black cog should be
enough imo

---------

Co-authored-by: Zoinkwiz <zoinkwiz@hotmail.co.uk>