@@ -34,6 +34,10 @@ import com.questhelper.requirements.Requirement;
 import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.conditional.ObjectCondition;
 import com.questhelper.requirements.item.ItemRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
+import static com.questhelper.requirements.util.LogicHelper.nor;
+import static com.questhelper.requirements.util.LogicHelper.not;
+import static com.questhelper.requirements.util.LogicHelper.or;
 import com.questhelper.requirements.util.LogicType;
 import com.questhelper.requirements.var.VarplayerRequirement;
 import com.questhelper.requirements.widget.WidgetTextRequirement;
@@ -41,116 +45,119 @@ import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.QuestPointReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.ItemStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.InterfaceID;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
 
-import java.util.*;
-
 public class ClockTower extends BasicQuestHelper
 {
-	ItemRequirement bucketOfWater, noteAboutWater, staminaPotions, ardougneCloak, redCog, blueCog, blackCog, whiteCog, ratPoison;
+	// Required items
+	ItemRequirement bucketOfWater;
 
-	Zone basement, firstFloor, secondFloor, groundFloor, secretPath, secretPath2, secretPath3, secretPath4,
-		secretPath5, secretPath6, cell;
+	// Recommended items
+	ItemRequirement staminaPotions;
+	ItemRequirement ardougneCloak;
 
-	Requirement inBasement, inGroundFloor, inFirstFloor, inSecondFloor, inSecretPath, inCell, startedQuestDuringSession,
-		synced, firstLeverDown, pulledFirstLeverUp, secondLeverUp, poisonedRats, placedRedCog, placedBlueCog, placedWhiteCog,
-		placedBlackCog;
+	// Zones
+	Zone basement;
+	Zone firstFloor;
+	Zone secondFloor;
+	Zone groundFloor;
+	Zone secretPath;
+	Zone secretPath2;
+	Zone secretPath3;
+	Zone secretPath4;
+	Zone secretPath5;
+	Zone secretPath6;
+	Zone cell;
 
-	QuestStep talkToKojo, syncStep;
+	// Miscellaneous requirements
+	ItemRequirement emptyBucket;
+	ItemRequirement noteAboutWater;
+	ItemRequirement redCog;
+	ItemRequirement blueCog;
+	ItemRequirement blackCog;
+	ItemRequirement whiteCog;
+	ItemRequirement ratPoison;
 
-	QuestStep enterBasement, pickUpRedCog, climbToGroundFloorFromBasement, redCogOnRedSpindle;
+	ZoneRequirement inBasement;
+	ZoneRequirement inGroundFloor;
+	ZoneRequirement inFirstFloor;
+	ZoneRequirement inSecondFloor;
+	ZoneRequirement inSecretPath;
+	ZoneRequirement inCell;
+	Requirement startedQuestDuringSession;
+	Requirement synced;
+	ObjectCondition firstLeverDown;
+	ObjectCondition pulledFirstLeverUp;
+	ObjectCondition secondLeverUp;
+	ChatMessageRequirement poisonedRats;
+	Requirement placedRedCog;
+	Requirement placedBlueCog;
+	Requirement placedWhiteCog;
+	Requirement placedBlackCog;
 
-	QuestStep goToLadderCedric, pushWall, climbCellLadder, pickUpBlueCog, climbToFirstFloor, blueCogOnBlueSpindle;
+	// Steps
+	NpcStep talkToKojo;
+	QuestStep syncStep;
 
-	QuestStep climbFromFirstFloorToGround, pickupBlackCog, blackCogOnBlackSpindle;
+	ObjectStep enterBasement;
+	DetailedQuestStep pickUpRedCog;
+	ObjectStep climbToGroundFloorFromBasement;
+	ObjectStep redCogOnRedSpindle;
 
-	QuestStep northWesternDoor, pickUpRatPoison, pullFirstLever, ratPoisonFood, westernGate, pickUpWhiteCog, climbWhiteLadder,
-		climbToSecondFloor, whiteCogOnWhiteSpindle, climbFromSecondFloorToFirst;
+	ItemStep getBucket;
+	ObjectStep fillBucket;
+	ObjectStep goToLadderCedric;
+	ObjectStep pushWall;
+	ObjectStep climbCellLadder;
+	DetailedQuestStep pickUpBlueCog;
+	ObjectStep climbToFirstFloor;
+	ObjectStep blueCogOnBlueSpindle;
 
-	QuestStep kojoReward;
+	ObjectStep climbFromFirstFloorToGround;
+	DetailedQuestStep pickupBlackCog;
+	ObjectStep blackCogOnBlackSpindle;
 
-	ConditionalStep getRedCog, getBlueCog, getBlackCog, getWhiteCog;
+	ObjectStep northWesternDoor;
+	DetailedQuestStep pickUpRatPoison;
+	ObjectStep pullFirstLever;
+	ObjectStep ratPoisonFood;
+	ObjectStep westernGate;
+	DetailedQuestStep pickUpWhiteCog;
+	ObjectStep climbWhiteLadder;
+	ObjectStep climbToSecondFloor;
+	ObjectStep whiteCogOnWhiteSpindle;
+	ObjectStep climbFromSecondFloorToFirst;
 
-	ConditionalStep goToBasementForRed, goToBasementForBlue, goToBasementForBlack, goToBasementForWhite,
-		goToFirstFloorWithBlueCog, goToGroundFloorWithRedCog, goToBasementWithBlackCog, goToSecondFloorWithWhiteCog,
-		goFinishQuest;
+	NpcStep finishQuest;
 
+	ConditionalStep getRedCog;
+	ConditionalStep getBlueCog;
+	ConditionalStep getBlackCog;
+	ConditionalStep getWhiteCog;
 
-	@Override
-	public Map<Integer, QuestStep> loadSteps()
-	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-
-		Map<Integer, QuestStep> steps = new HashMap<>();
-
-		ConditionalStep goStart = new ConditionalStep(this, talkToKojo);
-		// This is so we can lock the startedQuestDuringSession to true, so we don't need to ask to sync after
-		goStart.addStep(startedQuestDuringSession, talkToKojo);
-
-		steps.put(0, talkToKojo);
-
-		getRedCog = new ConditionalStep(this, goToBasementForRed);
-		getRedCog.addStep(redCog, goToGroundFloorWithRedCog);
-		getRedCog.addStep(inBasement, pickUpRedCog);
-
-		getBlueCog = new ConditionalStep(this, goToBasementForBlue);
-		getBlueCog.addStep(blueCog, goToFirstFloorWithBlueCog);
-		getBlueCog.addStep(inCell, pickUpBlueCog);
-		getBlueCog.addStep(inSecretPath, pushWall);
-
-		getBlackCog = new ConditionalStep(this, goToBasementForBlack);
-		getBlackCog.addStep(blackCog, goToBasementWithBlackCog);
-		getBlackCog.addStep(inBasement, pickupBlackCog);
-
-		getWhiteCog = new ConditionalStep(this, goToBasementForWhite);
-		getWhiteCog.addStep(new Conditions(whiteCog, inBasement), climbWhiteLadder);
-		getWhiteCog.addStep(new Conditions(whiteCog), goToSecondFloorWithWhiteCog);
-		getWhiteCog.addStep(new Conditions(inBasement, pulledFirstLeverUp, poisonedRats), pickUpWhiteCog);
-		getWhiteCog.addStep(new Conditions(inBasement, ratPoison, pulledFirstLeverUp), ratPoisonFood);
-		getWhiteCog.addStep(new Conditions(inBasement, ratPoison), pullFirstLever);
-		getWhiteCog.addStep(inBasement, pickUpRatPoison);
-
-		ConditionalStep doQuest = new ConditionalStep(this, syncStep);
-		doQuest.addStep(new Conditions(placedRedCog, placedBlueCog, placedBlackCog, placedWhiteCog, synced), goFinishQuest);
-		doQuest.addStep(new Conditions(placedRedCog, placedBlueCog, placedBlackCog, synced), getWhiteCog);
-		doQuest.addStep(new Conditions(placedRedCog, placedBlueCog, synced), getBlackCog);
-		doQuest.addStep(new Conditions(placedRedCog, synced), getBlueCog);
-		doQuest.addStep(synced, getRedCog);
-		steps.put(1, doQuest);
-		steps.put(2, doQuest);
-		steps.put(3, doQuest);
-		steps.put(4, doQuest);
-		steps.put(5, goFinishQuest);
-		steps.put(6, goFinishQuest);
-		steps.put(7, goFinishQuest);
-
-		return steps;
-	}
-
-	@Override
-	protected void setupRequirements()
-	{
-		bucketOfWater = new ItemRequirement("Bucket of Water or a pair of ice gloves or smiths gloves(i)", ItemID.BUCKET_WATER);
-		bucketOfWater.addAlternates(ItemID.ICE_GLOVES, ItemID.SMITHING_UNIFORM_GLOVES_ICE);
-		bucketOfWater.setTooltip("There is a bucket spawn next to the well east of the Clocktower. You can fill it on" +
-			" the well");
-		noteAboutWater = new ItemRequirement("There's a bucket and a well and just next to brother cedric for the black cog", -1, -1);
-		staminaPotions = new ItemRequirement("Stamina Potions", ItemCollections.STAMINA_POTIONS);
-		ardougneCloak = new ItemRequirement("Ardougne Cloak to teleport to monastery", ItemID.ARDY_CAPE_EASY);
-		ardougneCloak.addAlternates(ItemID.ARDY_CAPE_MEDIUM, ItemID.ARDY_CAPE_HARD, ItemID.ARDY_CAPE_ELITE);
-		redCog = new ItemRequirement("Red Cog", ItemID.REDCOG);
-		blueCog = new ItemRequirement("Blue Cog", ItemID.BLUECOG);
-		whiteCog = new ItemRequirement("White Cog", ItemID.WHITECOG);
-		blackCog = new ItemRequirement("Black Cog", ItemID.BLACKCOG);
-		ratPoison = new ItemRequirement("Rat Poison", ItemID.RAT_POISON);
-	}
+	ConditionalStep goToBasementForRed;
+	ConditionalStep goToBasementForBlue;
+	ConditionalStep goToBasementForBlack;
+	ConditionalStep goToBasementForWhite;
+	ConditionalStep goToFirstFloorWithBlueCog;
+	ConditionalStep goToGroundFloorWithRedCog;
+	ConditionalStep goToBasementWithBlackCog;
+	ConditionalStep goToSecondFloorWithWhiteCog;
+	ConditionalStep goFinishQuest;
 
 	@Override
 	protected void setupZones()
@@ -168,7 +175,8 @@ public class ClockTower extends BasicQuestHelper
 		cell = new Zone(new WorldPoint(2571, 9630, 0), new WorldPoint(2575, 9633, 0));
 	}
 
-	public void setupConditions()
+	@Override
+	protected void setupRequirements()
 	{
 		inSecondFloor = new ZoneRequirement(secondFloor);
 		inFirstFloor = new ZoneRequirement(firstFloor);
@@ -180,7 +188,7 @@ public class ClockTower extends BasicQuestHelper
 		startedQuestDuringSession = new Conditions(true, new VarplayerRequirement(QuestVarPlayer.QUEST_CLOCK_TOWER.getId(), 0));
 
 		synced = new Conditions(true, LogicType.OR,
-			new WidgetTextRequirement(InterfaceID.QuestjournalOverview.TITLE, "Clock Tower"),
+			new WidgetTextRequirement(InterfaceID.Questjournal.TITLE, "Clock Tower"),
 			startedQuestDuringSession
 		);
 
@@ -205,13 +213,29 @@ public class ClockTower extends BasicQuestHelper
 			new WidgetTextRequirement(InterfaceID.Questjournal.TEXTLAYER, true, "<str>I have successfully placed the White Cog on its spindle"),
 			new ChatMessageRequirement(inSecondFloor, "The cog fits perfectly.")
 		);
+
+		bucketOfWater = new ItemRequirement("Bucket of Water or a pair of ice gloves or smiths gloves(i)", ItemID.BUCKET_WATER);
+		bucketOfWater.addAlternates(ItemID.ICE_GLOVES, ItemID.SMITHING_UNIFORM_GLOVES_ICE);
+		bucketOfWater.setTooltip("There is a bucket spawn next to the well east of the Clock Tower. You can fill it on the well");
+
+		emptyBucket = new ItemRequirement("Bucket", ItemID.BUCKET_EMPTY);
+
+		noteAboutWater = new ItemRequirement("There's a bucket and a well and just next to brother cedric for the black cog", -1, -1);
+		staminaPotions = new ItemRequirement("Stamina Potions", ItemCollections.STAMINA_POTIONS);
+		ardougneCloak = new ItemRequirement("Ardougne Cloak to teleport to monastery", ItemID.ARDY_CAPE_EASY);
+		ardougneCloak.addAlternates(ItemID.ARDY_CAPE_MEDIUM, ItemID.ARDY_CAPE_HARD, ItemID.ARDY_CAPE_ELITE);
+		redCog = new ItemRequirement("Red Cog", ItemID.REDCOG);
+		blueCog = new ItemRequirement("Blue Cog", ItemID.BLUECOG);
+		whiteCog = new ItemRequirement("White Cog", ItemID.WHITECOG);
+		blackCog = new ItemRequirement("Black Cog", ItemID.BLACKCOG);
+		ratPoison = new ItemRequirement("Rat Poison", ItemID.RAT_POISON);
 	}
 
 	public void setupSteps()
 	{
 		// TODO: Need to determine to what degree PuzzleWrapperStep should be used in this quest
-		talkToKojo = new NpcStep(this, NpcID.BROTHER_KOJO, new WorldPoint(2570, 3245, 0), "Talk to Brother Kojo at the clock tower.");
-		talkToKojo.addDialogStep("OK old monk, what can I do?");
+		talkToKojo = new NpcStep(this, NpcID.BROTHER_KOJO, new WorldPoint(2570, 3245, 0), "Talk to Brother Kojo in the Clock Tower to start the quest.");
+		talkToKojo.addDialogStep("Yes.");
 
 		syncStep = new DetailedQuestStep(this, "Open your Quest Journal to sync your current state.");
 
@@ -221,24 +245,26 @@ public class ClockTower extends BasicQuestHelper
 			"Use the red cog on the red spindle.", redCog.highlighted());
 		redCogOnRedSpindle.addIcon(ItemID.REDCOG);
 
+		getBucket = new ItemStep(this, new WorldPoint(2616, 3255, 0), "Get the bucket next to Brother Cedric, north of the monastery, and fill it up on the well next to it for the Black cog step. If you have other plans for the black cog, you can ignore this step by going down the nearby ladder.", emptyBucket);
+		fillBucket = new ObjectStep(this, ObjectID.WELL, new WorldPoint(2612, 3254, 0), "Get the bucket next to Brother Cedric, north of the monastery, and fill it up on the well next to it for the Black cog step. If you have other plans for the black cog, you can ignore this step by going down the nearby ladder.", emptyBucket);
+
+		getBucket.addSubSteps(fillBucket);
+
 		goToLadderCedric = new ObjectStep(this, ObjectID.LADDER_CELLAR, new WorldPoint(2621, 3261, 0), "");
-		pushWall = new ObjectStep(this, ObjectID.SECRETDOOR2, new WorldPoint(2575, 9631, 0), "Follow the tunnel and " +
-			"push the wall at the end.");
+		pushWall = new ObjectStep(this, ObjectID.SECRETDOOR2, new WorldPoint(2575, 9631, 0), "Follow the tunnel and push the wall at the end.");
 		pickUpBlueCog = new DetailedQuestStep(this, new WorldPoint(2574, 9633, 0), "Pick up the blue cog.", blueCog);
 		climbCellLadder = new ObjectStep(this, ObjectID.LADDER_FROM_CELLAR, new WorldPoint(2572, 9631, 0), "");
 		blueCogOnBlueSpindle = new ObjectStep(this, ObjectID.BROKECLOCKPOLE_BLUE, new WorldPoint(2569, 3240, 1),
 			"Use the blue cog on the blue spindle.", blueCog.highlighted());
 		blueCogOnBlueSpindle.addIcon(ItemID.BLUECOG);
 
-		pickupBlackCog = new DetailedQuestStep(this, new WorldPoint(2613, 9639, 0), "Enter the north east door, and " +
-			"pick up the black cog with a bucket of water, alternatively you can equip ice gloves or smith gloves(i).", bucketOfWater, blackCog);
+		pickupBlackCog = new DetailedQuestStep(this, new WorldPoint(2613, 9639, 0), "Enter the north east door, and pick up the black cog with a bucket of water, alternatively you can equip ice gloves or smith gloves(i).", bucketOfWater, blackCog);
 		blackCogOnBlackSpindle = new ObjectStep(this, ObjectID.BROKECLOCKPOLE_BLACK, new WorldPoint(2570, 9642, 0),
 			"", blackCog.highlighted());
 		blackCogOnBlackSpindle.addIcon(ItemID.BLACKCOG);
 
 		northWesternDoor = new ObjectStep(this, ObjectID.POORDOOR, new WorldPoint(2575, 9651, 0), "Go through the north-western door.");
-		pickUpRatPoison = new DetailedQuestStep(this, new WorldPoint(2564, 9662, 0), "Pick up the rat poison in the " +
-			"north west of the dungeon.", ratPoison);
+		pickUpRatPoison = new DetailedQuestStep(this, new WorldPoint(2564, 9662, 0), "Pick up the rat poison in the north west of the dungeon.", ratPoison);
 		pullFirstLever = new ObjectStep(this, ObjectID.CTLEVERA, new WorldPoint(2591, 9661, 0),
 			"Pull the marked lever up.");
 		ratPoisonFood = new ObjectStep(this, ObjectID.CTFOODTROUGH, new WorldPoint(2587, 9654, 0),
@@ -250,7 +276,6 @@ public class ClockTower extends BasicQuestHelper
 		whiteCogOnWhiteSpindle = new ObjectStep(this, ObjectID.BROKECLOCKPOLE_WHITE, new WorldPoint(2567, 3241, 2),
 			"", whiteCog.highlighted());
 		whiteCogOnWhiteSpindle.addIcon(ItemID.WHITECOG);
-		kojoReward = new NpcStep(this, NpcID.BROTHER_KOJO, new WorldPoint(2570, 3245, 0), "Talk to Brother Kojo for your reward.");
 
 		enterBasement = new ObjectStep(this, ObjectID.LADDER_CELLAR, new WorldPoint(2566, 3242, 0), "");
 		climbFromFirstFloorToGround = new ObjectStep(this, ObjectID.SPIRALSTAIRSMIDDLE, new WorldPoint(2573, 3241, 1), "");
@@ -262,80 +287,136 @@ public class ClockTower extends BasicQuestHelper
 		climbToSecondFloor = new ObjectStep(this, ObjectID.SPIRALSTAIRSMIDDLE, new WorldPoint(2573, 3241, 1), "");
 		climbToSecondFloor.addDialogStep("Climb up the stairs.");
 
-		ConditionalStep goToBasementSteps = new ConditionalStep(this, enterBasement);
+		var goToBasementSteps = new ConditionalStep(this, enterBasement);
 		goToBasementSteps.addStep(inSecondFloor, climbFromSecondFloorToFirst);
 		goToBasementSteps.addStep(inFirstFloor, climbFromFirstFloorToGround);
-		goToBasementSteps.addStep(new Conditions(LogicType.OR, inSecretPath, inCell), climbCellLadder);
+		goToBasementSteps.addStep(or(inSecretPath, inCell), climbCellLadder);
 
-		ConditionalStep goToCellSteps = new ConditionalStep(this, goToLadderCedric);
+		var goToCellSteps = new ConditionalStep(this, goToLadderCedric);
 		goToCellSteps.addStep(inBasement, climbToGroundFloorFromBasement);
 		goToCellSteps.addStep(inSecondFloor, climbFromSecondFloorToFirst);
 		goToCellSteps.addStep(inFirstFloor, climbFromFirstFloorToGround);
 
-		ConditionalStep goToGroundFloor = new ConditionalStep(this, new DetailedQuestStep(this, ""));
-		goToGroundFloor.addStep(new Conditions(LogicType.OR, inSecretPath, inCell), climbCellLadder);
+		var goToGroundFloor = new ConditionalStep(this, new DetailedQuestStep(this, ""));
+		goToGroundFloor.addStep(or(inSecretPath, inCell), climbCellLadder);
 		goToGroundFloor.addStep(inBasement, climbToGroundFloorFromBasement);
 		goToGroundFloor.addStep(inSecondFloor, climbFromSecondFloorToFirst);
 		goToGroundFloor.addStep(inFirstFloor, climbFromFirstFloorToGround);
 
-		ConditionalStep goToFirstFloor = new ConditionalStep(this, climbToFirstFloor);
-		goToFirstFloor.addStep(new Conditions(LogicType.OR, inSecretPath, inCell), climbCellLadder);
+		var goToFirstFloor = new ConditionalStep(this, climbToFirstFloor);
+		goToFirstFloor.addStep(or(inSecretPath, inCell), climbCellLadder);
 		goToFirstFloor.addStep(inBasement, climbToGroundFloorFromBasement);
 		goToFirstFloor.addStep(inSecondFloor, climbFromSecondFloorToFirst);
 
-		ConditionalStep goToSecondFloor = new ConditionalStep(this, climbToFirstFloor);
-		goToSecondFloor.addStep(new Conditions(LogicType.OR, inSecretPath, inCell), climbCellLadder);
+		var goToSecondFloor = new ConditionalStep(this, climbToFirstFloor);
+		goToSecondFloor.addStep(or(inSecretPath, inCell), climbCellLadder);
 		goToSecondFloor.addStep(inBasement, climbToGroundFloorFromBasement);
 		goToSecondFloor.addStep(inFirstFloor, climbToSecondFloor);
 
-		goToBasementForRed = new ConditionalStep(this, goToBasementSteps, "Enter the clocktower's basement for the " +
-			"red cog.");
-		goToBasementForBlue = new ConditionalStep(this, goToCellSteps, "Climb down the ladder to the east of the " +
-			"Clocktower, next to Brother Cedric.");
-		goToBasementForWhite = new ConditionalStep(this, goToBasementSteps, "Enter the clocktower's basement for the " +
-			"white cog.");
-		goToBasementForBlack = new ConditionalStep(this, goToBasementSteps, "Enter the clocktower's basement for the " +
-			"black cog.");
+		goToBasementForRed = new ConditionalStep(this, goToBasementSteps, "Enter the Clock Tower basement for the red cog.");
+		goToBasementForBlue = new ConditionalStep(this, goToCellSteps, "Climb down the ladder to the east of the Clock Tower, next to Brother Cedric.");
+		goToBasementForWhite = new ConditionalStep(this, goToBasementSteps, "Enter the Clock Tower basement for the white cog.");
+		goToBasementForBlack = new ConditionalStep(this, goToBasementSteps, "Enter the Clock Tower basement for the black cog.", bucketOfWater);
 
-		goToFirstFloorWithBlueCog = new ConditionalStep(this, goToFirstFloor,
-			"Place the blue cog on the peg on the first floor.");
+		goToFirstFloorWithBlueCog = new ConditionalStep(this, goToFirstFloor, "Place the blue cog on the peg on the first floor.");
 		goToFirstFloorWithBlueCog.addStep(inFirstFloor, blueCogOnBlueSpindle);
 
 		goToGroundFloorWithRedCog = goToGroundFloor.copy();
 		goToGroundFloorWithRedCog.setText("Place the red cog on the peg on the ground floor.");
 		goToGroundFloorWithRedCog.addStep(null, redCogOnRedSpindle);
 
-		goToBasementWithBlackCog = new ConditionalStep(this, goToBasementSteps,
-			"Place the black cog on the peg in the basement.");
-		goToBasementWithBlackCog.addStep(new Conditions(inBasement, new Conditions(LogicType.NOR, inSecretPath, inCell)),
+		goToBasementWithBlackCog = new ConditionalStep(this, goToBasementSteps, "Place the black cog on the peg in the basement.");
+		goToBasementWithBlackCog.addStep(and(inBasement, nor(inSecretPath, inCell)),
 			blackCogOnBlackSpindle);
 
-		goToSecondFloorWithWhiteCog = new ConditionalStep(this, goToSecondFloor,
-			"Place the white cog on the peg on the second floor.");
+		goToSecondFloorWithWhiteCog = new ConditionalStep(this, goToSecondFloor, "Place the white cog on the peg on the second floor.");
 		goToSecondFloorWithWhiteCog.addStep(inSecondFloor, whiteCogOnWhiteSpindle);
 		goToSecondFloorWithWhiteCog.addSubSteps(climbWhiteLadder);
 
+		finishQuest = new NpcStep(this, NpcID.BROTHER_KOJO, new WorldPoint(2570, 3245, 0), "");
+
 		goFinishQuest = goToGroundFloor.copy();
-		goFinishQuest.setText("Talk to Kojo for your reward.");
-		goFinishQuest.addStep(null, kojoReward);
+		goFinishQuest.setText("Talk to Brother Kojo in the Clock Tower for your reward.");
+		goFinishQuest.addStep(null, finishQuest);
+	}
+
+	@Override
+	public Map<Integer, QuestStep> loadSteps()
+	{
+		initializeRequirements();
+		setupSteps();
+
+		var steps = new HashMap<Integer, QuestStep>();
+
+		var goStart = new ConditionalStep(this, talkToKojo);
+		// This is so we can lock the startedQuestDuringSession to true, so we don't need to ask to sync after
+		goStart.addStep(startedQuestDuringSession, talkToKojo);
+
+		steps.put(0, talkToKojo);
+
+		getRedCog = new ConditionalStep(this, goToBasementForRed);
+		getRedCog.addStep(redCog, goToGroundFloorWithRedCog);
+		getRedCog.addStep(inBasement, pickUpRedCog);
+
+		getBlueCog = new ConditionalStep(this, goToBasementForBlue);
+		getBlueCog.addStep(blueCog, goToFirstFloorWithBlueCog);
+		getBlueCog.addStep(inCell, pickUpBlueCog);
+		getBlueCog.addStep(inSecretPath, pushWall);
+		getBlueCog.addStep(and(not(bucketOfWater), emptyBucket, not(placedBlackCog)), fillBucket);
+		getBlueCog.addStep(and(not(bucketOfWater), not(placedBlackCog)), getBucket);
+
+		getBlackCog = new ConditionalStep(this, goToBasementForBlack);
+		getBlackCog.addStep(blackCog, goToBasementWithBlackCog);
+		getBlackCog.addStep(inBasement, pickupBlackCog);
+
+		getWhiteCog = new ConditionalStep(this, goToBasementForWhite);
+		getWhiteCog.addStep(and(whiteCog, inBasement), climbWhiteLadder);
+		getWhiteCog.addStep(and(whiteCog), goToSecondFloorWithWhiteCog);
+		getWhiteCog.addStep(and(inBasement, pulledFirstLeverUp, poisonedRats), pickUpWhiteCog);
+		getWhiteCog.addStep(and(inBasement, ratPoison, pulledFirstLeverUp), ratPoisonFood);
+		getWhiteCog.addStep(and(inBasement, ratPoison), pullFirstLever);
+		getWhiteCog.addStep(inBasement, pickUpRatPoison);
+
+		var doQuest = new ConditionalStep(this, syncStep);
+		doQuest.addStep(and(placedRedCog, placedBlueCog, placedBlackCog, placedWhiteCog, synced), goFinishQuest);
+		doQuest.addStep(and(placedRedCog, placedBlueCog, placedBlackCog, synced), getWhiteCog);
+		doQuest.addStep(and(placedRedCog, placedBlueCog, synced), getBlackCog);
+		doQuest.addStep(and(placedRedCog, synced), getBlueCog);
+		doQuest.addStep(synced, getRedCog);
+		steps.put(1, doQuest);
+		steps.put(2, doQuest);
+		steps.put(3, doQuest);
+		steps.put(4, doQuest);
+		steps.put(5, goFinishQuest);
+		steps.put(6, goFinishQuest);
+		steps.put(7, goFinishQuest);
+
+		return steps;
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRequirements()
 	{
-		return Collections.singletonList(bucketOfWater);
+		return List.of(
+			bucketOfWater
+		);
 	}
 
-    @Override
-    public List<ItemRequirement> getItemRecommended()
-    {
-        return Arrays.asList(staminaPotions, ardougneCloak);
-    }
+	@Override
+	public List<ItemRequirement> getItemRecommended()
+	{
+		return List.of(
+			staminaPotions,
+			ardougneCloak
+		);
+	}
 
 	@Override
 	public List<String> getCombatRequirements()
 	{
-		return Collections.singletonList("Able to survive a hit or 2 from an Ogre (level 53)");
+		return List.of(
+			"Able to survive a hit or 2 from an Ogre (level 53)"
+		);
 	}
 
 	@Override
@@ -347,36 +428,59 @@ public class ClockTower extends BasicQuestHelper
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Collections.singletonList(new ItemReward("Coins", ItemID.COINS, 500));
+		return List.of(
+			new ItemReward("Coins", ItemID.COINS, 500)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		ArrayList<PanelDetails> allSteps = new ArrayList<>();
+		var sections = new ArrayList<PanelDetails>();
 
-		PanelDetails gettingStarted = new PanelDetails("Getting Started", new ArrayList<>(Collections.singletonList(talkToKojo)));
-		allSteps.add(gettingStarted);
+		sections.add(new PanelDetails("Getting Started", List.of(
+			talkToKojo,
+			syncStep
+		)));
 
-		PanelDetails redCog = new PanelDetails("Obtaining the red cog", new ArrayList<>(Arrays.asList(goToBasementForRed,
-			pickUpRedCog, goToGroundFloorWithRedCog)));
-		allSteps.add(redCog);
-		PanelDetails blueCog = new PanelDetails("Obtaining the blue cog",
-			new ArrayList<>(Arrays.asList(goToBasementForBlue, pushWall, pickUpBlueCog, goToFirstFloorWithBlueCog)),
-			noteAboutWater);
-		allSteps.add(blueCog);
-		PanelDetails blackCog = new PanelDetails("Obtaining the black cog",
-			new ArrayList<>(Arrays.asList(goToBasementForBlack, pickupBlackCog, goToBasementWithBlackCog)),
-			bucketOfWater);
-		allSteps.add(blackCog);
-		PanelDetails whiteCog = new PanelDetails("Obtaining the white cog",
-			new ArrayList<>(Arrays.asList(goToBasementForWhite, pickUpRatPoison, pullFirstLever,
-				ratPoisonFood, westernGate, pickUpWhiteCog, goToSecondFloorWithWhiteCog)));
-		allSteps.add(whiteCog);
-		PanelDetails finishingOff = new PanelDetails("Finishing off",
-			new ArrayList<>(Collections.singletonList(goFinishQuest)));
-		allSteps.add(finishingOff);
+		sections.add(new PanelDetails("Obtaining the red cog", List.of(
+			goToBasementForRed,
+			pickUpRedCog,
+			goToGroundFloorWithRedCog
+		)));
 
-		return allSteps;
+		sections.add(new PanelDetails("Obtaining the blue cog", List.of(
+			getBucket,
+			goToBasementForBlue,
+			pushWall,
+			pickUpBlueCog,
+			goToFirstFloorWithBlueCog
+		), List.of(
+			noteAboutWater
+		)));
+
+		sections.add(new PanelDetails("Obtaining the black cog", List.of(
+			goToBasementForBlack,
+			pickupBlackCog,
+			goToBasementWithBlackCog
+		), List.of(
+			bucketOfWater
+		)));
+
+		sections.add(new PanelDetails("Obtaining the white cog", List.of(
+			goToBasementForWhite,
+			pickUpRatPoison,
+			pullFirstLever,
+			ratPoisonFood,
+			westernGate,
+			pickUpWhiteCog,
+			goToSecondFloorWithWhiteCog
+		)));
+
+		sections.add(new PanelDetails("Finishing off", List.of(
+			goFinishQuest
+		)));
+
+		return sections;
 	}
 }
